# scicat-ci

./: .gitmodules  CODEOWNERS  LICENSE  README.md  deploy.sh
.github/actions/: check_changes.yml  set_environment.yml
.github/workflows/: actions-lint.yml  build-deploy-scicat-component.yml  build-deploy.yml  build.yml  environment.yml  master.yml  materialised-view.yml  proposals-sync.yml  reusable.build-deploy-scicat-component.yml  reusable.build-deploy.yml  reusable.changes.yml  reusable.environment.yml  s3-broker.yml  scicat-be-next.yml  scicat-be.yml  scicat-exporter.yml  scicat-fe-next.yml  scicat-fe.yml  scicat-globus-proxy.yml  scicat-ingestor.yml  scicat-landing-page-server.yml  scicat-oaipmh.yml  scicat-pan-ontologies-api.yml  scicat-pss.yml  scicat-s3-broker.yml  scicat-scoring.yml  scicat-search-api.yml  scicat-to-pss  scicat-to-pss.yml  scicat.yml
cron_chart/: README.md  values.yaml
cron_chart/templates/: NOTES.txt  cronjob.yaml  secrets.yaml
curation/: publish_old.sh  requirements.txt
curation/notebooks/: non_interesting_scientific_metadata.py  parameters.ipynb  techniques_dict.py  update_techniques.ipynb  utils.py
dev/: .gitignore  README.md  docker-compose.test.yaml  docker-compose.yaml
generic_service_chart/: Chart.yaml  README.md  values.yaml
generic_service_chart/templates/: NOTES.txt  (+7 more)
helm/: helmfile-common.yaml
matviews/: updateMatViews.sh
proposals/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  swagger.json
proposals/src/: main.py  orchestrator.py  proposals.py  scicat.py  utils.py
proposals/src/tests/: test_main.py  test_orchestrator.py  test_proposals.py  test_scicat.py  test_utils.py
proposals/src/tests/acceptance/: test_orchestrator.py
proposals/src/tests/fixtures/: mocked_data.py
scicat-to-pss/: Dockerfile  copy_public_ds.py
(+211 files in other folders)
