[tool.poetry]
name = "proposals"
version = "0.1.0"
description = "A microservice for syncing proposals from duo to scicat"
authors = ["AWI-7903 <awi-7903@psi.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2020.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^6.2.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
