[tool.poetry]
name = "proposals"
version = "0.1.0"
description = "A microservice for syncing proposals from duo to scicat"
authors = ["AWI-7903 <awi-7903@psi.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytz = "^2024.2"
python-dotenv = "^1.0.1"
scicat-sdk-py = "^4.21.0"

[tool.poetry.group.dev.dependencies]
black = "^26.0.0"
isort = "^8.0.0"
pylint = "^4.0.0"
pytest = "^8.3.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
